
AC_INIT([domica-skins],3.0.0,[devel@domica.biz])
AM_INIT_AUTOMAKE([foreign])

# Silent rules are available since 1.11, but older versions
# are still in use. So don't use them unconditionally.
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AM_PATH_PYTHON

AC_OUTPUT([
Makefile
skins/Makefile
skins/fonts/Makefile
skins/hd-line-tvpro/Makefile
skins/hd-line-tvpro/1/Makefile
skins/hd-line-tvpro/2/Makefile
skins/hd-line-tvpro/3/Makefile
skins/hd-line-tvpro/Super/Makefile
skins/hd-line-tvpro/buttons/Makefile
skins/hd-line-tvpro/fonts/Makefile
skins/hd-line-tvpro/icons/Makefile
skins/hd-line-tvpro/icons_menu/Makefile
skins/hd-line-tvpro/main/Makefile
skins/hd-line-tvpro/menu/Makefile
skins/hd-line-tvpro/meta/Makefile
skins/HD-Line_Tuxbox/Makefile
skins/HD-Line_Tuxbox/1/Makefile
skins/HD-Line_Tuxbox/2/Makefile
skins/HD-Line_Tuxbox/3/Makefile
skins/HD-Line_Tuxbox/buttons/Makefile
skins/HD-Line_Tuxbox/icons/Makefile
skins/HD-Line_Tuxbox/icons_cpypt/Makefile
skins/HD-Line_Tuxbox/main/Makefile
skins/HD-Line_Tuxbox/menu/Makefile
skins/HD-Line_Tuxbox/meta/Makefile
skins/HD-Line_domica-2c/Makefile
skins/HD-Line_domica-2c/buttons/Makefile
skins/HD-Line_domica-2c/icons/Makefile
skins/HD-Line_domica-2c/icons_cpypt/Makefile
skins/HD-Line_domica-2c/main/Makefile
skins/HD-Line_domica-2c/menu/Makefile
skins/HD-Line_domica-2c/meta/Makefile
skins/LT6.HD/Makefile
skins/LT6.HD/bg/Makefile
skins/LT6.HD/meta/Makefile
skins/LT6.HD/ltmc/Makefile
skins/LT6.HD/selection/Makefile
skins/LT6.HD/fonts/Makefile
skins/LT6.HD/icons/Makefile
skins/LT6.HD/skin_default/Makefile
skins/LT6.HD/skin_default/icons/Makefile
skins/LT6.HD/borderset/Makefile
skins/LT6.HD/extensions/Makefile
skins/LT6.HD/plugins/Makefile
skins/LT6.HD/plugins/mt/Makefile
skins/LT6.HD/buttons/Makefile
skins/DMConcinnity-HD/Makefile
skins/DMConcinnity-HD/skin_default/Makefile
skins/DMConcinnity-HD/skin_default/icons/Makefile
skins/DMConcinnity-HD/skin_default/buttons/Makefile
skins/DMConcinnity-HD/python/Makefile
skins/DMConcinnity-HD/python/Converter/Makefile
skins/DMConcinnity-HD/python/Renderer/Makefile
skins/DMConcinnity-HD/menu/Makefile
skins/DMConcinnity-HD/meta/Makefile
skins/DMConcinnity-HD/icons/Makefile
skins/DMConcinnity-HD/extensions/Makefile
skins/DMConcinnity-HD/buttons/Makefile
skins/Glamour_X-Infinity/Makefile
skins/Glamour_X-Infinity/menu/Makefile
skins/Glamour_X-Infinity/meta/Makefile
skins/Glamour_X-Infinity/fonts/Makefile
skins/Glamour_X-Infinity/frame/Makefile
skins/Glamour_X-Infinity/icons/Makefile
skins/Glamour_X-Infinity/general/Makefile
skins/Glamour_X-Infinity/slider/Makefile
skins/Glamour_X-Infinity/buttons/Makefile
])

